MOSIP-350 Files.writeString method not available in java 8, using Files.write method instead